test/corpus/L1/negative/exponent-malformed.st
"---
kind: negative
section: error.exponent-malformed
codes: E_EXPONENT_MALFORMED
---"
1.5e+
